style and colors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
     <section class="story">
         <h2>Our Story</h2>
         <p>
-         
+            We started as a small group of neighbors who wanted to make a big difference. Over the years,
+            volunteers and donors have helped us build safe water sources, teach hygiene, and support local maintenance.
+            Our work is community-led, which means locals help design and care for every project.
+        </p>
+
+        <p>
+            We believe that clean water changes everything — health, education, and opportunity. With simple,
+            sustainable solutions we partner with villages to create long-lasting impact.
+        </p>
+
+        <ul>
+            <li>Built 120+ wells in rural communities</li>
+            <li>Provided hygiene education to over 15,000 people</li>
+            <li>Trained local teams to maintain water systems</li>
+        </ul>
     </section>
 
     <!-- Real-World Impact Story Section -->
