--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
+    <section class="hero" role="banner">
+        <!-- Inner container keeps text readable while background stays full-width -->
+        <div class="hero-inner">
+            <!-- Main headline -->
+            <h1>Clean Water for Everyone</h1>
+            <!-- Subheadline -->
+            <p>Join us in bringing safe, clean water to communities in need.</p>
+        </div>
     </section>
 
     <!-- Story Section: This tells the story of the nonprofit -->
@@ -30,9 +33,9 @@
         </p>
 
         <ul>
-            <li>Built 120+ wells in rural communities</li>
-            <li>Provided hygiene education to over 15,000 people</li>
-            <li>Trained local teams to maintain water systems</li>
+            <li><a href="https://www.charitywater.org/our-work" target="_blank" rel="noopener noreferrer" title="See our work on charity: water">Built 120+ wells in rural communities</a></li>
+            <li><a href="https://www.charitywater.org/our-work" target="_blank" rel="noopener noreferrer" title="See our work on charity: water">Provided hygiene education to over 15,000 people</a></li>
+            <li><a href="https://www.charitywater.org/our-work" target="_blank" rel="noopener noreferrer" title="See our work on charity: water">Trained local teams to maintain water systems</a></li>
         </ul>
     </section>
 
@@ -45,17 +48,33 @@
             <!-- Impact image -->
             <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
             <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
+            <div>
+                <p>
+                    Before the well, Amina walked miles each day to carry heavy, unsafe water. Her little sister often missed school and the family fell ill from dirty water.
+                </p>
+                <p>
+                    After the community well was built, Amina spends her time learning and playing. Clean water means better health, more school days, and hope for the future.
+                </p>
+            </div>
         </div>
     </section>
 
     <!-- Call-to-Action Section: This encourages visitors to take action -->
     <section class="call-to-action">
         <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
+        <p>
+            Your gift helps communities gain reliable access to clean water — improving health, education, and economic opportunity.
+            Donations are used to build and maintain wells, train local teams, and provide hygiene education.
+        </p>
+        <ul>
+            <li><a href="https://www.charitywater.org/donate/the-spring" target="_blank" rel="noopener noreferrer" title="Donate - $25"> $25 — clean water for a child for a year</a></li>
+            <li><a href="https://www.charitywater.org/donate/the-spring" target="_blank" rel="noopener noreferrer" title="Donate - $100"> $100 — community hygiene training and supplies</a></li>
+            <li><a href="https://www.charitywater.org/donate/the-spring" target="_blank" rel="noopener noreferrer" title="Donate - $500"> $500 — helps build and maintain a village well</a></li>
+        </ul>
+        <p style="font-size:0.9em; color:#333;">
+            We prioritize transparency and partner with communities to ensure lasting impact.
+        </p>
+        <a href="https://www.charitywater.org/donate/the-spring" class="donate-button" target="_blank" rel="noopener noreferrer">Donate Now</a>
     </section>
 </body>
 </html>
